# cable-modem-rrd

./: .gitignore  .prettierrc  Makefile  README.md  eslint.config.js  eslint.config.ts  go.mod  go.sum  index.html  main.go  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  script.sh  tsconfig.app.json  vite.config.ts
.github/workflows/: codacy.yml  codeql.yml  stale.yml
api/: routes.go
data-client-presentation/: pnpm-lock.yaml  vite.config.ts
data-client-presentation/src/: dataTypes.d.ts
data-client-presentation/src/components/: App.tsx
data-client-presentation/src/utils/: typing.ts
data-ingestion/: parse.py
data-serve/: serve.py
models/: db.go  downstream_bonded_channels.go  shared.go
presentation/: eslint.config.js
presentation/src/: main.tsx
src/: index.css
src/data/: api.py  cli.py  common.py  constants.py  db.py  logger.py  parse.py  refresh.py  scrape.py  scrape.sh  serve.py  timer.py  utils.py  vars.py
src/data/utils/: logger.py  timer.py
src/presentation/: Presentation.tsx  dataTypes.d.ts  index.css  main.tsx
src/presentation/components/: Chart.tsx  ChartTooltip.tsx  FlashableElement.tsx  Graph.tsx  Presentation.tsx
src/presentation/hooks/: useInterval.ts  useOnWindowResize.ts
src/presentation/utils/: camelCaseKeys.ts  chartUtils.ts  shapeData.ts  typing.ts
