[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Goodkind", email = "alex@goodkind.io" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiopg==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "async-timeout==4.0.3",
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.115.8",
    "fastapi-cli==0.0.7",
    "flask==3.1.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "hypercorn==0.17.3",
    "hyperframe==6.1.0",
    "idna==3.10",
    "inflect==7.5.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "more-itertools==10.6.0",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "priority==2.0.0",
    "psycopg2-binary==2.9.10",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "quart==0.20.0",
    "requests==2.32.3",
    "rich==13.9.4",
    "rich-toolkit==0.13.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlacodegen==2.3.0.post1",
    "sqlalchemy==1.4.54",
    "starlette==0.45.3",
    "typeguard==4.4.2",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.4",
    "websockets==15.0",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
]
